# rrs_server

./: .gitignore  CMakeLists.txt  README.md  docker-compose-dev.yml  docker-compose.override-sample.yml  docker-compose.yml
app/: render_service.cfg  render_service_default.cfg  rrs-service.sh
docker/: Dockerfile  Xsession  vnc_startup.sh
rrsdev/: Dockerfile  build.sh
src/: main.cpp  main.h  misc.cpp  misc.h  renderer.cpp  renderer.h  stdpch.cpp  stdpch.h  tools.cpp  tools.h  visual_config.cpp  visual_config.h
